# my-trading-analytics

backend/: Cargo.toml  rsi_output.json  trades_data.csv
backend/src/: main.rs
frontend/: package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/components/: TokenData.tsx
